[package]
name = "orphan"
version = "0.1.0"
authors = ["Artem Sergeev"]
edition = "2024"
publish = false

[dependencies]
tch = "0.13.0"
log = "0.4.27"
serde = "1.0.219"
serde_derive = "1.0.219"
getset = "0.1.5"
config = "0.15.11"
anyhow = "1.0.98"
diffusers = "0.3.1"
env_logger = "0.11.8"
serde_json = "1.0.140"
clap = { version = "4.5.37", features = ["derive"] }
